# backend

./: .gitignore  .python-version  README.md  add_comment.py  manage.py  pyproject.toml
.github/workflows/: checks.yml  ci-cd.yml  deploy.yml
SleepNFocus/: pyproject.toml
SleepNFocus/config/: settings.py
ai/: apps.py  models.py  services.py  urls.py  views.py
ai/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
cognitive_statistics/: apps.py  models.py  serializers.py  urls.py  views.py
cognitive_statistics/migrations/: 0001_initial.py  0002_cognitivesessionproblem_problem_and_more.py  0002_cognitivetestformat_cognitivetesttype_and_more.py  0002_initial.py  0003_cognitiveresultsymbol_reaction_avg_ms_and_more.py  0003_cognitivesession_test_format.py
cognitives/: apps.py  models.py  serializers.py  urls.py  views.py
cognitives/migrations/: 0001_initial.py  0002_initial.py
config/: asgi.py  health_check.py  redis_client.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
docs/swagger/: swagger.yaml
docs/swaggers/: swagger.yaml
management/: apps.py  serializers.py  tests.py  urls.py  views.py
sleep/: models.py  urls.py
sleep_record/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
sleep_record/migrations/: 0001_initial.py  0002_alter_sleeprecord_memo.py  0002_initial.py  0003_merge_0002_alter_sleeprecord_memo_0002_initial.py
users/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birth_year.py  0002_alter_user_birth_year_alter_user_gender.py  0002_alter_user_gender.py  0002_alter_user_profile_img.py  0003_alter_user_birth_year.py  0003_alter_user_profile_img.py  0003_alter_user_social_id_user_unique_social_type_id.py  0003_alter_user_social_type.py  0004_alter_jobsurvey_cognitive_type_and_more.py  0004_user_has_completed_onboarding.py
