[tool.poetry]
name = "focuz-backend"
version = "0.1.0"
description = "수면과 인지 기능의 상관관계를 지원하는 API 서버"
authors = ["workface <with.you70@gmail.com>"]
readme = "README.md"

packages = [
  { include = "admin" },
  { include = "cognitive_statistics" },
  { include = "cognitives" },
  { include = "config" },
  { include = "sleep" },
  { include = "users" },
]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.1,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
